--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,5 +1,7 @@
-<h1>Your dashboard!</h1>
-
+<center>
+  <h1>Your dashboard!</h1>
+</center>
+<br>
 <!-- Kickoff Backbone -->
 <script type="application/javascript">
 $(function () { 
