--- a/app/assets/stylesheets/lists.css.scss
+++ b/app/assets/stylesheets/lists.css.scss
@@ -1,3 +1,27 @@
 // Place all the styles related to the lists controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.list-pending-tasks { float: right; }
+.delete-list { float: right; }
+
+#show-list-form { 
+  font-size: 12px; 
+  color: #cc0000;
+}
+
+#date-info { text-align: center; }
+
+#list-form { float: left; }
+#submit-task-form { font-size: 8px; }
+#remove-list-form { font-size: 8px; float: left; }
+
+ul#lists-sortable li {
+  list-style-type: none;
+  margin-top: 10px;
+//  margin-right: 20px;
+//  margin-left: -10px;
+//  margin-bottom: 10px;
+  font-size: 1.0em; 
+//  height: 1.0em; 
+}
