--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -1,3 +1,46 @@
 // Place all the styles related to the tasks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+/* Timer */
+#timer-window {
+  z-index:1000;
+  position:absolute;
+  top:0;
+  bottom:0;
+  left:0;
+  width:100%;
+  background:grey;
+  opacity:0.8;
+  -moz-opacity:0.8;
+  filter:alpha(opacity=80);
+  }
+  
+.timer-content {
+  position: relative;
+  top: 200px;
+}
+
+/* doToday/doLater links */
+.today .list-do-today { display: none; }
+.later .list-do-later { display: none; }
+
+/* Check boxes */
+.task-complete {
+  text-decoration: line-through;
+  color: grey;
+}
+.task-complete .task-unchecked { display: none; }
+.task-incomplete .task-checked { display: none; }
+
+/* Forms */
+#show-task-form { font-size: 12px; color: #cc0000; }
+#task-form { float: left; }
+#submit-task-form { font-size: 8px; }
+#remove-task-form { font-size: 8px; float: left; }
+
+ul#task-content li {
+  list-style-type: none;
+  margin-top: 10px;
+  font-size: 1.0em; 
+}
