--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,16 +14,44 @@
  *= require_tree .
  */
 
-$link-color: red;
+$link-color: #5C3317;
 
 @import "twitter/bootstrap";
 
-.glyphicon { color: red;}
+/* Bootstrap */
+.glyphicon { color: brown;}
 
-/* Titltes */
-#date-info, #tasksView-title  {
-  font-size: 20px;
-  text-align: center;
+.btn-danger {
+  color: brown;
+  background-color: beige;
+  border-color: beige;
+}
+
+.input-group-addon {
+  font-size: 8px;
+  background-color: beige;
+  border-left: 0px;
+}
+
+/* Generic */
+body {
+  background-image: url('bg-wood.jpg');
+  color: #5C3317;
+}
+
+a:hover {
+  text-decoration: none;
+};
+
+a { 
+  cursor: pointer; 
+  cursor: hand; 
+}
+
+ul, ol {
+margin-top: 0;
+margin-bottom: 10px;
+padding-left: 0px;
 }
 
 /* Helpers */
@@ -35,7 +63,111 @@ $link-color: red;
      margin-right: auto;
 }
 
+/* Forms */
+.form-control {
+  background-color:beige;
+}
+
+/* Titles */
+#date-info, #tasksView-title  {
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 0.25em;
+}
+
+/* Summary Head */
 #lists-overall-info, #task-overall-info {
   font-size: 18px;
   text-align: center;
+  margin-bottom: 0.75em;
+}
+
+/* Timer */
+@media (min-width: 993px) {
+  #timer-window {
+    z-index:1000;
+    position:absolute;
+    top: -10%;
+    bottom: 10%;
+    left: -200%;
+    width: 400%;
+    height: 85vh;
+    background:beige;
+    opacity:0.85;
+    -moz-opacity:0.85;
+    filter:alpha(opacity=85);
+    }
+
+  .timer-time {
+    margin-top: 5%;
+    font-size: 200px;
+    margin-bottom: -5%;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 992px) {
+  #timer-window {
+    z-index:1000;
+    position:absolute;
+    top: -60%;
+    bottom: 10%;
+    left: 0%;
+    width: 100%;
+    height: 85vh;
+    background:beige;
+    opacity:0.85;
+    -moz-opacity:0.85;
+    filter:alpha(opacity=85);
+    }
+  
+  .timer-time {
+    margin-top: 10%;
+    font-size: 175px;
+    margin-bottom: -5%;
+  }
+}
+
+@media (min-width: 480px) and (max-width: 769px) {
+  #timer-window {
+    z-index:1000;
+    position:absolute;
+    top: -60%;
+    bottom: 10%;
+    left: 0%;
+    width: 100%;
+    height: 85vh;
+    background:beige;
+    opacity:0.85;
+    -moz-opacity:0.85;
+    filter:alpha(opacity=85);
+    }
+  
+  .timer-time {
+    margin-top: 15%;
+    font-size: 150px;
+    margin-bottom: -8%;
+  }
+}
+
+@media (max-width: 479px) {
+  #timer-window {
+    z-index:1000;
+    position:absolute;
+    top: -60%;
+    bottom: 10%;
+    left: 0%;
+    width: 100%;
+    height: 85vh;
+    background:beige;
+    opacity:0.85;
+    -moz-opacity:0.85;
+    filter:alpha(opacity=85);
+    }
+  
+  .timer-time {
+    margin-top: 15%;
+    font-size: 140px;
+    margin-bottom: -8%;
+  }
+  
 }
