--- a/app/assets/templates/tasks/tasks_item.jst.ejs
+++ b/app/assets/templates/tasks/tasks_item.jst.ejs
@@ -4,10 +4,10 @@
 <td>
 <!-- Checkboxes -->
   <span class="task-<%= completeStatus %>">
-    <input type="checkbox" class="task-checked"
-                           data-id="<%=task.id %>" checked>
-    <input type="checkbox" class="task-unchecked"
-                           data-id="<%=task.id %>">
+    <a href="#" class="task-checked glyphicon glyphicon-check"
+                data-id="<%=task.id %>"></a>
+    <a href="#" class="task-unchecked glyphicon glyphicon-unchecked"
+                data-id="<%=task.id %>"></a>
   </span>
 
   <!-- Task Title -->
@@ -18,19 +18,17 @@
   <span class="task-options">
     <% if (viewType === "todayView") { %>
       <!-- Open Timer Window -->
-      <a href="#" class="task-open-timer" data-id="<%= task.id %>">Start</a>
+      <a href="#" class="task-open-timer glyphicon glyphicon-dashboard" data-id="<%= task.id %>"></a>
     <% } %>
-    <!-- Edit -->
-    <a href="#" class="task-edit-link" data-id="<%= task.id %>">Edit</a>
 
     <!-- Remove Task -->
-    <a href="#" class="list-remove-task" data-id="<%= task.id %>">Delete</a>
+    <a href="#" class="list-remove-task glyphicon glyphicon-remove" data-id="<%= task.id %>"></a>
 
     <!-- doLater/doToday -->
     <span class="<%= todayStatus %>">
-      <a href="#" class="list-do-later" data-id="<%= task.id %>">Not Today</a>
+      <a href="#" class="list-do-later glyphicon glyphicon-flag" data-id="<%= task.id %>"></a>
       <% if (viewType !== "todayView") { %>
-        <a href="#" class="list-do-today" data-id="<%= task.id %>">Today</a>
+        <a href="#" class="list-do-today glyphicon glyphicon-flag" data-id="<%= task.id %>" style="color: grey"></a>
       <% } %>
     </span>
     <!-- Actual/Expected Pomodoros -->
@@ -39,11 +37,21 @@
 </td>
 <!-- Edit Form -->
 <td>
-  <form class="task-edit" data-id="<%= task.id %>">
+  <form id="task-edit" class="input-group" data-id="<%= task.id %>">
     <input type="text" 
            data-id="<%= task.id %>"
            name="task[title]"
-           class="task-edit-form hidden"
+           class="task-edit-form form-control hidden"
            value="<%= task.escape('title') %>">
   </form>
 </td>
+
+<!-- <form id="task-form" 
+     class="hidden clearfix input-group" 
+     style="font-size: 8px">
+  <input type="text" name="task[title]" class="form-control">
+  <span class="input-group-addon glyphicon glyphicon-plus"
+        id="submit-task-form"></span>
+  <span class="input-group-addon glyphicon glyphicon-remove"
+        id="remove-task-form"></span>
+</form> -->
