--- a/app/assets/templates/tasks/tasks_view.jst.ejs
+++ b/app/assets/templates/tasks/tasks_view.jst.ejs
@@ -48,8 +48,7 @@
 
     <!-- Add Task Form -->
       <form id="task-form" 
-           class="hidden clearfix input-group" 
-           style="font-size: 8px">
+           class="hidden clearfix input-group">
         <input type="text" name="task[title]" class="form-control">
         <a class="input-group-addon glyphicon glyphicon-plus"
               id="submit-task-form"></a>
