--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,7 +18,13 @@ $link-color: #5C3317;
 @import "twitter/bootstrap";
 
 /* Bootstrap */
-.glyphicon { color: brown;}
+.glyphicon { 
+  color: brown;
+  font-size: 15px;
+  width: 1.25em;
+}
+
+.glyphicon:empty { width: 1.25em; }
 
 .btn-danger {
   color: brown;
@@ -173,7 +179,7 @@ ul#task-content li, ul#list-items li {
     bottom: 10%;
     left: 0%;
     width: 100%;
-    height: 85vh;
+    height: 60vh;
     background:beige;
     opacity:0.85;
     -moz-opacity:0.85;
@@ -182,7 +188,7 @@ ul#task-content li, ul#list-items li {
   
   .timer-time {
     margin-top: 15%;
-    font-size: 140px;
+    font-size: 130px;
     margin-bottom: -8%;
   }
   
