--- a/app/assets/templates/tasks/tasks_item.jst.ejs
+++ b/app/assets/templates/tasks/tasks_item.jst.ejs
@@ -2,6 +2,13 @@
 <% var completeStatus = task.get("complete") ? "complete" : "incomplete" %>
 
 <td>
+  <!-- todayView/unplannedView doLater -->
+  <% if (viewType === "todayView") { %>
+    <span class="<%= todayStatus %>">
+      <a href="#" class="do-later glyphicon glyphicon-arrow-left tov-left" data-id="<%= task.id %>"></a>
+    </span>
+  <% } %>
+    
 <!-- Checkboxes -->
   <span class="task-<%= completeStatus %>">
     <a href="#" class="task-checked glyphicon glyphicon-check"
@@ -10,30 +17,30 @@
                 data-id="<%=task.id %>"></a>
   </span>
 
+  <!-- Open Timer Window -->
+  <% if (viewType === "todayView") { %>
+    <a href="#" class="task-open-timer glyphicon glyphicon-dashboard" data-id="<%= task.id %>" style="top: 2px; left: -1px"></a>
+  <% } %>
+  
   <!-- Task Title -->
   <span class="task-<%=completeStatus %> task-title">
     <%= task.escape("title") %>
   </span>
+  
+  <!-- Actual/Expected Pomodoros -->
+  <%= task.get("pomodoro_actual")%>/<%= task.get("pomodoro_expected")%>
+  <a href="#" class="edit-pomodoro "></a>
 
-  <span class="task-options">
-    <% if (viewType === "todayView") { %>
-      <!-- Open Timer Window -->
-      <a href="#" class="task-open-timer glyphicon glyphicon-dashboard" data-id="<%= task.id %>"></a>
-    <% } %>
+  <!-- Remove Task -->
+  <a href="#" class="remove-task glyphicon glyphicon-remove rmt-<%= viewType %>" data-id="<%= task.id %>"></a>
 
-    <!-- Remove Task -->
-    <a href="#" class="list-remove-task glyphicon glyphicon-remove" data-id="<%= task.id %>"></a>
-
-    <!-- doLater/doToday -->
+  <!-- tasksView doLater/doToday -->
+  <% if (viewType === "tasksView") { %>
     <span class="<%= todayStatus %>">
-      <a href="#" class="list-do-later glyphicon glyphicon-flag" data-id="<%= task.id %>"></a>
-      <% if (viewType !== "todayView") { %>
-        <a href="#" class="list-do-today glyphicon glyphicon-flag" data-id="<%= task.id %>" style="color: grey"></a>
-      <% } %>
+        <a href="#" class="do-later glyphicon glyphicon-arrow-right tav-right" data-id="<%= task.id %>"></a>
+        <a href="#" class="do-today glyphicon glyphicon-arrow-right tav-right" data-id="<%= task.id %>" style="color: grey"></a>
     </span>
-    <!-- Actual/Expected Pomodoros -->
-    <%= task.get("pomodoro_actual")%>/<%= task.get("pomodoro_expected")%>
-  </span>
+  <% } %>
 </td>
 <!-- Edit Form -->
 <td>
