--- a/app/assets/templates/lists/lists_view.jst.ejs
+++ b/app/assets/templates/lists/lists_view.jst.ejs
@@ -98,7 +98,8 @@ My Lists
       );
     $("ul").on('mouseleave', '.list-item', 
       function() {
-        $(this).find(".remove-list").addClass("hidden"); }
+        $(this).find(".remove-list").addClass("hidden"); 
+      }
     );
   });
 </script>
