--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,13 +18,6 @@ $link-color: #5C3317;
 @import "twitter/bootstrap";
 
 /* Bootstrap */
-.glyphicon { 
-  color: brown;
-  font-size: 15px;
-  width: 1.25em;
-}
-
-.glyphicon:empty { width: 1.25em; }
 
 .btn-danger {
   color: brown;
@@ -192,4 +185,33 @@ ul#task-content li, ul#list-items li {
     margin-bottom: -8%;
   }
   
+}
+
+@media (max-width: 992px) {
+  .list-group {
+  margin-bottom: 20px;
+  padding-left: 0;
+  font-size: 1.5em;
+  }
+}
+
+/* Glyphicons */
+@media (min-width: 993px) {
+  .glyphicon { 
+    color: brown;
+    font-size: 15px;
+    width: 1.25em;
+  }
+
+  .glyphicon:empty { width: 1.25em; }  
+}
+
+@media (max-width: 992px) {
+  .glyphicon { 
+    color: brown;
+    font-size: 30px;
+    width: 1.25em;
+  }
+
+  .glyphicon:empty { width: 1.25em; } 
 }
