--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -21,19 +21,50 @@
   top: 30%;
 }
 
-.rmt-tasksView {
-  position: absolute;
-  right: 0%;
-  margin-right: 15%;
-  top: 30%;
+@media (min-width: 993px) {
+  .rmt-tasksView {
+    position: absolute;
+    right: 0%;
+    margin-right: 15%;
+    top: 30%;
+  }
+
+  .rmt-todayView {
+    position: absolute;
+    right: 0%;
+    margin-right: 5%;
+    top: 30%;
+  }
+  
+  .tav-right {
+    position: absolute;
+    right: 0%;
+    margin-right: 5%;
+    top: 30%;
+  }
 }
 
-.rmt-todayView {
-  position: absolute;
-  right: 0%;
-  margin-right: 5%;
-  top: 30%;
-}
+@media (max-width: 992px) {
+  .rmt-tasksView {
+    position: absolute;
+    right: 0%;
+    margin-right: 15%;
+    top: 20%;
+  }
 
+  .rmt-todayView {
+    position: absolute;
+    right: 0%;
+    margin-right: 5%;
+    top: 20%;
+  }
+  
+  .tav-right {
+    position: absolute;
+    right: 0%;
+    margin-right: 5%;
+    top: 20%;
+  }
+}
 
 
