--- a/app/assets/templates/lists/lists_item.jst.ejs
+++ b/app/assets/templates/lists/lists_item.jst.ejs
@@ -8,7 +8,7 @@
 <% } %>
 
 <!-- List Title -->
-<a href="#" class="open-list" data-id="<%= list.id %>"><%= list.escape('title') %></a>
+<a href="#" class="list-title" data-id="<%= list.id %>"><%= list.escape('title') %></a>
 
 <!-- Remove List -->
 <a href="#" class="hidden remove-list pull-right glyphicon glyphicon-remove" data-id="<%= list.id %>"></a>
