--- a/app/assets/templates/lists/lists_view.jst.ejs
+++ b/app/assets/templates/lists/lists_view.jst.ejs
@@ -74,6 +74,11 @@ My Lists
 <ul id="list-items" class="list-group">
   <!-- child content will be rendered here -->
 </ul>
+
+<div id="list-alert" class="alert alert-danger" style="display: none;">
+  Woah there. You should have at least one list!
+</div>
+
 </div>
 
 <script>
