--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,6 +31,17 @@ $link-color: #5C3317;
   border-left: 0px;
 }
 
+.navbar-inverse .navbar-brand, .navbar-text, .navbar-text a,
+.navbar-inverse .navbar-nav > .active > a, 
+.navbar-inverse .navbar-nav > .active > a:hover, 
+.navbar-inverse .navbar-nav > .active > a:focus {
+  color: beige;
+}
+
+.navbar-inverse .navbar-text {
+  color: chocolate;
+}
+
 /* Generic */
 body {
   background-image: url('bg-wood.jpg');
@@ -94,7 +105,13 @@ ul#task-content li, ul#list-items li {
 }
 
 /* Timer */
-@media (min-width: 993px) {
+#timer-window .btn-danger {
+  color: white;
+  background-color: #d9534f;
+  border-color: #d43f3a;
+}
+
+@media (min-width: 980px) {
   #timer-window {
     z-index:1000;
     position:absolute;
@@ -109,6 +126,12 @@ ul#task-content li, ul#list-items li {
     filter:alpha(opacity=85);
     }
 
+  .timer-title {
+    margin-top: 5%;
+    font-size: 50px;
+    margin-bottom: -10%;
+  }
+  
   .timer-time {
     margin-top: 5%;
     font-size: 200px;
@@ -116,7 +139,7 @@ ul#task-content li, ul#list-items li {
   }
 }
 
-@media (min-width: 769px) and (max-width: 992px) {
+@media (min-width: 768px) and (max-width: 979px) {
   #timer-window {
     z-index:1000;
     position:absolute;
@@ -130,6 +153,12 @@ ul#task-content li, ul#list-items li {
     -moz-opacity:0.85;
     filter:alpha(opacity=85);
     }
+    
+  .timer-title {
+    margin-top: 10%;
+    font-size: 50px;
+    margin-bottom: -10%;
+  }
   
   .timer-time {
     margin-top: 10%;
@@ -138,7 +167,7 @@ ul#task-content li, ul#list-items li {
   }
 }
 
-@media (min-width: 480px) and (max-width: 769px) {
+@media (min-width: 481px) and (max-width: 767px) {
   #timer-window {
     z-index:1000;
     position:absolute;
@@ -152,7 +181,13 @@ ul#task-content li, ul#list-items li {
     -moz-opacity:0.85;
     filter:alpha(opacity=85);
     }
-  
+    
+  .timer-title {
+    margin-top: 15%;
+    font-size: 36px;
+    margin-bottom: -16%;
+  }
+
   .timer-time {
     margin-top: 15%;
     font-size: 150px;
@@ -160,7 +195,7 @@ ul#task-content li, ul#list-items li {
   }
 }
 
-@media (max-width: 479px) {
+@media (max-width: 480px) {
   #timer-window {
     z-index:1000;
     position:absolute;
@@ -174,6 +209,12 @@ ul#task-content li, ul#list-items li {
     -moz-opacity:0.85;
     filter:alpha(opacity=85);
     }
+    
+  .timer-title {
+    margin-top: 15%;
+    font-size: 36px;
+    margin-bottom: -16%;
+  }
   
   .timer-time {
     margin-top: 15%;
@@ -183,7 +224,7 @@ ul#task-content li, ul#list-items li {
   
 }
 
-@media (max-width: 992px) {
+@media (max-width: 980px) {
   .list-group {
   margin-bottom: 20px;
   padding-left: 0;
@@ -192,7 +233,7 @@ ul#task-content li, ul#list-items li {
 }
 
 /* Glyphicons */
-@media (min-width: 993px) {
+@media (min-width: 980px) {
   .glyphicon { 
     color: brown;
     font-size: 15px;
@@ -202,7 +243,7 @@ ul#task-content li, ul#list-items li {
   .glyphicon:empty { width: 1.25em; }  
 }
 
-@media (max-width: 992px) {
+@media (max-width: 979px) {
   .glyphicon { 
     color: brown;
     font-size: 23px;
